--- a/publications.html
+++ b/publications.html
@@ -29,7 +29,8 @@
 
   <section>
   <p>
-    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
+    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. 
+    Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
   <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
   </section>
@@ -48,19 +49,22 @@
   <h2>Pollinator Conservation</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. <i>People and Nature</i>. 
+      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2018).</b> Drought reduces floral resources for pollinators. <i>Global Change Biology</i>. 
+      <b>Phillips et al. (2018).</b> Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
       <a href="https://doi.org/10.1111/gcb.14130">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). <i>Basic and Applied Ecology</i>. 
+      <b>Phillips et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). 
+      <i>Basic and Applied Ecology</i>, 32: 66-76. 
       <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. <i>Landscape Ecology</i>. 
+      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
+      <i>Landscape Ecology</i>, 35: 513-527. 
       <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
@@ -73,27 +77,28 @@
     <h2>Roads & Road Verges</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>. 
+      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. <i>Journal of Applied Ecology</i>. 
+      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
+      <i>Journal of Applied Ecology</i>, 56: 2316-2327. 
       <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>. 
+      <b>Phillips et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
       <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>. 
+      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
       <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>. 
+      <b>Phillips et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
       <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>. 
+      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
       <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
@@ -119,22 +124,26 @@
   <h2>Social Science in Conservation</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Duncan, Phillips, et al. (in prep).</b> Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: a survey of fishers to reveal current practices and potential solutions.
+      <b>Duncan</b>, <b>Phillips</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
+      a survey of fishers to reveal current practices and potential solutions.
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. <i>People and Nature</i>. 
+      <b>Phillips et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. 
+      <i>People and Nature</i>, 7: 815-827. 
       <a href="https://doi.org/10.1002/pan3.70014">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>. 
+      <b>Phillips et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>, 4: 1216-1232. 
       <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. <i>People and Nature</i>. 
+      Knapp & <b>Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, the hazel dormouse Muscardinus avellanarius. <i>Ecological Solutions and Evidence</i>. 
+      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, 
+      the hazel dormouse <i>Muscardinus avellanarius</i>. <i>Ecological Solutions and Evidence</i>, 3: e12198. 
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
   </ul>
