--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
   <h2>Recent Projects</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips (2025).</b> Environmental connections between forests and oceans. <i>A scoping review for the Woodland Trust</i>. 
+      <b>Phillips</b> (2025). Environmental connections between forests and oceans. <i>A scoping review for the Woodland Trust</i>. 
       <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
     </li>
   </ul>
@@ -49,12 +49,12 @@
   <h2>Pollinator Conservation</h2>
   <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Knapp & Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      Knapp & <b>Phillips</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2018).</b> Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
+      <b>Phillips</b> et al. (2018). Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
       <a href="https://doi.org/10.1111/gcb.14130">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
