--- a/publications.html
+++ b/publications.html
@@ -47,7 +47,7 @@
   
   <section>
   <h2>Pollinator Conservation</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
       Knapp & <b>Phillips</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
