--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
     <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. 
     Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
@@ -35,17 +35,18 @@
   <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
   </section>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <h2>Recent Projects</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips</b> (2025). Environmental connections between forests and oceans. <i>A scoping review for the Woodland Trust</i>. 
+      <b>Phillips</b> (2025). Environmental connections between forests and oceans. 
+      <i>A scoping review for the Woodland Trust</i>. 
       <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
     </li>
   </ul>
-  </section>
+</section>
   
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -73,9 +74,9 @@
   </ul>
   </section>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
     <h2>Roads & Road Verges</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
       <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
@@ -104,9 +105,9 @@
   </ul>
   </section>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <h2>Marine Plastic Pollution</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
       <b>Author, D. et al. (Year).</b> Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
@@ -120,9 +121,9 @@
   </ul>
   </section>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <h2>Social Science in Conservation</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
       <b>Duncan</b>, <b>Phillips</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
       a survey of fishers to reveal current practices and potential solutions.
@@ -149,9 +150,9 @@
   </ul>
   </section>
 
-  <section>
+  <section style="width: 50%; margin: 0 auto;">
   <h2>Programme Design & Impact</h2>
-  <ul style="list-style-type: none; padding: 0; margin-top: 1.5rem;">
+  <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
       <b>Author, M. et al. (Year).</b> Title of programme development paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
