--- a/publications.html
+++ b/publications.html
@@ -39,7 +39,7 @@
   <h2>Recent Projects</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips</b> (2025). Environmental connections between forests and oceans. 
+      <b>Phillips BB</b> (2025). Environmental connections between forests and oceans. 
       <i>A scoping review for the Woodland Trust</i>. 
       <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
     </li>
@@ -50,26 +50,26 @@
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      Knapp & <b>Phillips</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips</b> et al. (2018). Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
+      <b>Phillips BB</b> et al. (2018). Drought reduces floral resources for pollinators. <i>Global Change Biology</i>, 24: 3226-3235. 
       <a href="https://doi.org/10.1111/gcb.14130">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). 
+      <b>Phillips BB et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). 
       <i>Basic and Applied Ecology</i>, 32: 66-76. 
       <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Shaw, Phillips, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
+      <b>Shaw, Phillips BB, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
       <i>Landscape Ecology</i>, 35: 513-527. 
       <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-    <b>Süle, ..., Phillips, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
+    <b>Süle, ..., Phillips BB, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
     </li>
   </ul>
   </section>
@@ -78,28 +78,28 @@
     <h2>Roads & Road Verges</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
+      <b>Phillips BB et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
+      <b>Phillips BB et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
       <i>Journal of Applied Ecology</i>, 56: 2316-2327. 
       <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
+      <b>Phillips BB et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
       <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
+      <b>Phillips BB et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
       <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
+      <b>Phillips BB et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
       <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
+      <b>Phillips BB et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
       <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
@@ -125,25 +125,25 @@
   <h2>Social Science in Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Duncan</b>, <b>Phillips</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
+      <b>Duncan</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
       a survey of fishers to reveal current practices and potential solutions.
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. 
+      <b>Phillips BB et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. 
       <i>People and Nature</i>, 7: 815-827. 
       <a href="https://doi.org/10.1002/pan3.70014">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>, 4: 1216-1232. 
+      <b>Phillips BB et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>, 4: 1216-1232. 
       <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      Knapp & <b>Phillips et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      Knapp & <b>Phillips BB et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, 
+      <b>Phillips BB et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, 
       the hazel dormouse <i>Muscardinus avellanarius</i>. <i>Ecological Solutions and Evidence</i>, 3: e12198. 
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
@@ -167,8 +167,8 @@
 
   <footer>
   <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
-    <a href="mailto:bphillips.consultancy@gmail.com" class="footer-icon email" aria-label="Email Ben and Emily"></a>
+    <a href="https://www.linkedin.com/in/benjamin-b-Phillips BB/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+    <a href="mailto:bPhillips BB.consultancy@gmail.com" class="footer-icon email" aria-label="Email Ben and Emily"></a>
     <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
   </p>
     <p>&copy; 2025 Apex Science & Conservation Consultancy. All rights reserved.</p>
