--- a/publications.html
+++ b/publications.html
@@ -43,6 +43,10 @@
       <i>A scoping review for the Woodland Trust</i>. 
       <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
     </li>
+    <li style="margin-bottom: 1rem;">
+      <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
+      a survey of fishers to reveal current practices and potential solutions.
+    </li>
   </ul>
 </section>
   
@@ -50,7 +54,7 @@
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      Knapp JL & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
@@ -78,28 +82,28 @@
     <h2>Roads & Road Verges</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2020).</b> Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
+      <b>Phillips BB</b> et al. (2020). Enhancing road verges to aid pollinator conservation: a review. <i>Biological Conservation</i>, 250: 108687. 
       <a href="https://doi.org/10.1016/j.biocon.2020.108687">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2019).</b> Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
+      <b>Phillips BB</b> et al. (2019). Road verges support pollinators in agricultural landscapes, but are diminished by heavy traffic and summer cutting. 
       <i>Journal of Applied Ecology</i>, 56: 2316-2327. 
       <a href="https://doi.org/10.1111/1365-2664.13470">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2021).</b> Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
+      <b>Phillips BB</b> et al. (2021). Impacts of multiple pollutants on pollinator activity in road verges. <i>Journal of Applied Ecology</i>, 58: 1017-1029. 
       <a href="https://doi.org/10.1111/1365-2664.13844">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2021).</b> Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
+      <b>Phillips BB</b> et al. (2021). Road verge extent and habitat composition across Great Britain. <i>Landscape and Urban Planning</i>, 214: 104159. 
       <a href="https://doi.org/10.1016/j.landurbplan.2021.104159">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2020).</b> Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
+      <b>Phillips BB</b> et al. (2020). Ecosystem service provision by road verges. <i>Journal of Applied Ecology</i>, 57: 488-501. 
       <a href="https://doi.org/10.1111/1365-2664.13556">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2021).</b> Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
+      <b>Phillips BB</b> et al. (2021). Spatial extent of road pollution: A national analysis. <i>Science of The Total Environment</i>, 773: 145589. 
       <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
@@ -110,13 +114,13 @@
   <ul style="padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
     <li style="margin-bottom: 1rem;">
-      <b>Author, D. et al. (Year).</b> Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Author, E. et al. (Year).</b> Title of marine plastic paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Author, F. et al. (Year).</b> Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
   </section>
@@ -125,25 +129,25 @@
   <h2>Social Science in Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Duncan</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
+      <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
       a survey of fishers to reveal current practices and potential solutions.
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2025).</b> The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. 
+      <b>Phillips BB</b> et al. (2025). The Renewing Biodiversity Longitudinal Survey (ReBLS): Protocol for a panel study. 
       <i>People and Nature</i>, 7: 815-827. 
       <a href="https://doi.org/10.1002/pan3.70014">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2022).</b> Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>, 4: 1216-1232. 
+      <b>Phillips BB</b> et al. (2022). Monitoring public engagement with nature using Google Trends. <i>People and Nature</i>, 4: 1216-1232. 
       <a href="https://doi.org/10.1002/pan3.10381">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      Knapp & <b>Phillips BB et al. (2021).</b> Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
+      Knapp & <b>Phillips BB</b> et al. (2021). Socio-psychological factors, beyond knowledge, predict people’s engagement in pollinator conservation. 
       <i>People and Nature</i>, 3: 204-220. 
       <a href="https://doi.org/10.1002/pan3.10168">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2022).</b> Harnessing practitioner knowledge to inform the conservation of a protected species, 
+      <b>Phillips BB</b> et al. (2022). Harnessing practitioner knowledge to inform the conservation of a protected species, 
       the hazel dormouse <i>Muscardinus avellanarius</i>. <i>Ecological Solutions and Evidence</i>, 3: e12198. 
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
@@ -167,7 +171,7 @@
 
   <footer>
   <p class="footer-contact">
-    <a href="https://www.linkedin.com/in/benjamin-b-Phillips BB/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
+    <a href="https://www.linkedin.com/in/benjamin-b-phillips/" target="_blank" class="footer-icon linkedin" aria-label="Ben's LinkedIn"></a>
     <a href="mailto:bPhillips BB.consultancy@gmail.com" class="footer-icon email" aria-label="Email Ben and Emily"></a>
     <a href="https://www.linkedin.com/in/emily-duncan-7a324b64" target="_blank" class="footer-icon linkedin" aria-label="Emily's LinkedIn"></a>
   </p>
