--- a/publications.html
+++ b/publications.html
@@ -63,17 +63,17 @@
       <a href="https://doi.org/10.1111/gcb.14130">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Phillips BB et al. (2018).</b> Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). 
+      <b>Phillips BB</b> et al. (2018). Shared traits make flies and bees effective pollinators of oilseed rape (Brassica napus L.). 
       <i>Basic and Applied Ecology</i>, 32: 66-76. 
       <a href="https://doi.org/10.1016/j.baae.2018.06.004">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Shaw, Phillips BB, et al. (2020).</b> Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
+      Shaw, <b>Phillips BB</b>, et al. (2020). Mass-flowering crops have a greater impact than semi-natural habitat on crop pollinators and pollen deposition. 
       <i>Landscape Ecology</i>, 35: 513-527. 
       <a href="https://doi.org/10.1007/s10980-019-00962-0">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-    <b>Süle, ..., Phillips BB, ..., et al. (2025).</b> Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
+    Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
     </li>
   </ul>
   </section>
@@ -158,13 +158,13 @@
   <h2>Programme Design & Impact</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
-      <b>Author, M. et al. (Year).</b> Title of programme development paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Ducan EM</b> et al. (Year). Title of programme development paper 1. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Author, N. et al. (Year).</b> Title of programme development paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Ducan EM</b> et al. (Year). Title of programme development paper 2. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
     <li style="margin-bottom: 1rem;">
-      <b>Author, O. et al. (Year).</b> Title of programme development paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
+      <b>Ducan EM</b> et al. (Year). Title of programme development paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
 </section>
