--- a/publications.html
+++ b/publications.html
@@ -35,22 +35,21 @@
   <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
   </section>
 
-  <section style="width: 50%; margin: 0 auto;">
-  <h2>Recent Projects</h2>
-  <ul style="padding: 0; margin-top: 1.5rem;">
-    <li style="margin-bottom: 1rem;">
-      <b>Phillips BB</b> (2025). Environmental connections between forests and oceans. 
-      <i>A scoping review for the Woodland Trust</i>. 
-      <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
-    </li>
-    <li style="margin-bottom: 1rem;">
-      <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
-      a survey of fishers to reveal current practices and potential solutions.
-    </li>
-  </ul>
+  <section>
+  <div class="publications-box">
+    <h2>Recent Projects</h2>
+    <ul style="padding: 0; margin-top: 1.5rem;">
+      <li style="margin-bottom: 1rem;">
+        <b>Phillips</b> (2025). Environmental connections between forests and oceans. 
+        <i>A scoping review for the Woodland Trust</i>. 
+        <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
+      </li>
+    </ul>
+  </div>
 </section>
   
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
+  <div class="publications-box">
   <h2>Pollinator Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -76,9 +75,11 @@
     Süle, ..., <b>Phillips BB</b>, ..., et al. (2025). Pollinator-promoting interventions in European urban habitats - a synthesis. <i>Ecology Letters</i>. 
     </li>
   </ul>
+    </div>
   </section>
 
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
+  <div class="publications-box">
     <h2>Roads & Road Verges</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -107,9 +108,11 @@
       <a href="https://doi.org/10.1016/j.scitotenv.2021.145589">View publication</a>
     </li>
   </ul>
+    </div>
   </section>
 
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
+  <div class="publications-box">
   <h2>Marine Plastic Pollution</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     ***EMILY TO ADD / ANY OTHER SECTIONS RELEVANT TO HER***
@@ -123,9 +126,11 @@
       <b>Duncan EM</b> et al. (Year). Title of marine plastic paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
+    </div>
   </section>
 
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
+  <div class="publications-box">
   <h2>Social Science in Conservation</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -152,9 +157,11 @@
       <a href="https://doi.org/10.1002/2688-8319.12198">View publication</a>
     </li>
   </ul>
+    </div>
   </section>
 
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
+  <div class="publications-box">
   <h2>Programme Design & Impact</h2>
   <ul style="padding: 0; margin-top: 1.5rem;">
     <li style="margin-bottom: 1rem;">
@@ -167,6 +174,7 @@
       <b>Ducan EM</b> et al. (Year). Title of programme development paper 3. <i>Journal Name.</i> <a href="#">View publication</a>
     </li>
   </ul>
+    </div>
 </section>
 
   <footer>
