--- a/publications.html
+++ b/publications.html
@@ -27,7 +27,7 @@
     <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
 
-  <section style="width: 50%; margin: 0 auto;">
+  <section>
   <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. 
     Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
