--- a/about.html
+++ b/about.html
@@ -21,8 +21,21 @@
     </nav>
   </header>
 
+
+  <h1 style="text-align: center;">
+  <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  Our Services
+    <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
+
+  
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
-  <h1 style="font-size: 2rem;">About Us</h1>
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  About Us
+    <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
+
   <div style="padding-left: 15%; padding-right: 15%;">
     <p>
       At <strong>Apex Science & Conservation</strong>, we provide scientific support and 
