--- a/publications.html
+++ b/publications.html
@@ -21,19 +21,21 @@
     </nav>
   </header>
 
-  <h1 style="text-align: center;">
-  <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
   Publications
-    <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+    <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
 
-  <section>
-  <p>
+  <div style="padding-left: 15%; padding-right: 15%;">
+    <p>
     During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. 
     Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
   </p>
   <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
-  </section>
+  </div>
+</section>
 
   <section>
   <div class="publications-box">
