--- a/services.html
+++ b/services.html
@@ -21,11 +21,17 @@
     </nav>
   </header>
 
-  <h1 style="text-align: center;">
-  <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
   Our Services
-    <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+    <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
+
+  <div style="padding-left: 15%; padding-right: 15%;">
+    <p>Below are the range of services that we typically offer, with expertise ranging from terrestrial to marine systems, and from ecological approaches to social sciences.</p>
+  </div>
+</section>
 
 <section>
   <div class="sidepicture-section">
