--- a/testimonials.html
+++ b/testimonials.html
@@ -21,11 +21,17 @@
     </nav>
   </header>
 
-  <h1 style="text-align: center;">
-  <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
   Testimonials
-    <img src="images/logo-apex-notext-colourlight.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+    <img src="images/logo-apex-notext.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
 </h1>
+
+  <div style="padding-left: 15%; padding-right: 15%;">
+    <p>Here are some experiences of working with us, shared by partners.</p>
+  </div>
+</section>
   
   <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
 
