--- a/services.html
+++ b/services.html
@@ -29,8 +29,10 @@
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
-    <p>Below are the range of services that we typically offer, with expertise ranging from terrestrial to marine systems, and from ecological approaches to social sciences.</p>
-  </div>
+  <p>We offer a range of services that reflect our experience across both land and sea, combining ecological science with insights from the social sciences. 
+    Whether it's understanding habitats, working with communities, or bringing together different kinds of knowledge, 
+    we take an integrated approach to environmental challenges.</p>
+</div>
 </section>
 
 <section>
