--- a/testimonials.html
+++ b/testimonials.html
@@ -29,8 +29,8 @@
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
-    <p>Here are some experiences of working with us, shared by partners.</p>
-  </div>
+  <p>Here are a few reflections from partners we've worked with — their words offer a sense of what it's like to collaborate with us.</p>
+</div>
 </section>
   
   <section style="position: relative; width: 95%; height: 600px; margin: 0 auto; overflow: hidden;">
