--- a/publications.html
+++ b/publications.html
@@ -29,12 +29,14 @@
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
-    <p>
-    During our time working in research, we have published work that underpins evidence-based conservation and supports real-world decisions. 
-    Below is a selection of our publications, grouped by theme—spanning pollinator conservation, marine plastic pollution, social science, spatial data, and programme development.
+  <p>
+    Our work is rooted in research that informs conservation practice and policy. Below is a selection of our publications, 
+    grouped by theme — covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.
   </p>
-  <p>Between us, we have published more than 50 academic papers, which have been cited more than 3,000 times, as well as reports for a wide range of organisations.</p>
-  </div>
+  <p>
+    Together, we’ve authored over 50 academic papers — cited more than 3,000 times — alongside reports for a wide range of organisations.
+  </p>
+</div>
 </section>
 
   <section>
