--- a/publications.html
+++ b/publications.html
@@ -30,11 +30,10 @@
 
   <div style="padding-left: 15%; padding-right: 15%;">
   <p>
-    Our work is rooted in research that informs conservation practice and policy. Below is a selection of our publications, 
-    grouped by theme — covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.
+    Our work is rooted in research that informs conservation practice and policy.
   </p>
   <p>
-    Together, we’ve authored over 50 academic papers — cited more than 3,000 times — alongside reports for a wide range of organisations.
+    Together, we’ve authored over 50 academic papers — cited more than 3,000 times — alongside reports for a wide range of organisations. Below is a selection of them — covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.
   </p>
 </div>
 </section>
