--- a/publications.html
+++ b/publications.html
@@ -33,8 +33,9 @@
     Our work is grounded in research that informs conservation practice and policy.
   </p>
   <p>
-    In collaboration with many colleagues and partner organisations, we’ve authored over 50 academic papers — cited more than 3,000 times — alongside reports for a wide range of audiences
-    Below is a selection, covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.
+    In collaboration with many colleagues and partner organisations, we’ve authored over 50 academic papers — cited more than 3,000 times — 
+    alongside reports for a wide range of audiences.</p>
+    <p>Below is a selection, covering topics such as pollinator conservation, road verges, marine plastic pollution, and social science in conservation.</p>
   </p>
 
 </div>
@@ -49,6 +50,10 @@
         <i>A scoping review for the Woodland Trust</i>. 
         <a href="https://www.rainforestrecovery.org.uk/news/oceans-and-forests-a-new-discovery">View publication</a>
       </li>
+      <li style="margin-bottom: 1rem;">
+      <b>Duncan EM</b>, <b>Phillips BB</b>, et al. (in prep). Discarded fishing nets and marine megafauna entanglements in Príncipe, Gulf of Guinea: 
+      a survey of fishers to reveal current practices and potential solutions.
+    </li>
     </ul>
   </div>
 </section>
