--- a/contact.html
+++ b/contact.html
@@ -21,9 +21,20 @@
     </nav>
   </header>
 
+<section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  Publications
+    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
+
   <section style="max-width: 800px; margin: 3rem auto; text-align: center;">
-  <h2>Contact Us</h2>
-  <p style="font-size: 1.1rem; max-width: 600px; margin: 0.5rem auto 1.5rem;">
+  <h1 style="font-size: 2rem; text-align: center;">
+  <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  Contact Us
+    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+</h1>
+  <p style="max-width: 600px; margin: 0.5rem auto 1.5rem;">
     We'd love to hear from you if you have a project in mind or simply want to learn more about how we can support your work.
   </p>
 
