--- a/publications.html
+++ b/publications.html
@@ -24,8 +24,8 @@
   <section style="max-width: 1150px; margin: 3rem auto; text-align: center;">
   <h1 style="font-size: 2rem; text-align: center;">
   <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
-  Publications 
-    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-right: 0.5rem;">
+  Publications
+    <img src="images/logo-apex-notext-colour.png" alt="Apex Logo" style="height: 25px; vertical-align: middle; margin-left: 0.5rem;">
 </h1>
 
   <div style="padding-left: 15%; padding-right: 15%;">
